<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/container_scroll_view2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg"
            android:drawableStart="@android:drawable/ic_menu_save"
            android:id="@+id/button_r"
            android:background="#20549f"
            android:paddingEnd="10sp"
            android:paddingStart="10sp"
            android:textAllCaps="false"
            android:layout_below="@+id/numberPicker"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_text"
            android:id="@+id/textView6"
            android:layout_below="@+id/textView7"
            android:layout_alignStart="@+id/button_r"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_gruppe"
            android:id="@+id/textView5"
            android:textSize="16sp"
            android:layout_marginStart="4dp"
            android:layout_below="@+id/view"
            android:layout_alignParentStart="true"
            android:layout_marginTop="79dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welc1"
            android:id="@+id/textView8"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welc2"
            android:id="@+id/textView7"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_below="@+id/textView8"
            android:layout_marginTop="15sp"
            android:gravity="center_horizontal" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/view"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView6">




        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_name"
            android:id="@+id/register_editText"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_alignParentBottom="false"
            android:layout_alignWithParentIfMissing="false"
            android:layout_centerVertical="true"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="15dp" />

        </android.support.design.widget.TextInputLayout>

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numberPicker"
            android:layout_below="@+id/view"
            android:layout_toEndOf="@+id/button_r"
            android:layout_marginStart="33dp"
            android:orientation="horizontal" />

    </RelativeLayout>
</ScrollView>